<resources>
    <string name="app_name">Moneycim</string>
    <string name="permission_camera_rationale">Please give camera permission</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">Low Storage!</string>
    <string name="no_camera_permission">There is no camera permission</string>
    <string name="tap_on_quantity">Tap on the quantity to capture.</string>
    <string name="scan_receipt">Scan Receipt</string>
    <string name="save">Save</string>
    <string name="add_a_spending">Add a Spending</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="delete">delete</string>
    <string name="edit_a_spending">Edit a Spending</string>
    <string name="turkish_lira_symbol">₺</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="app_description">Smart Spending Tracker</string>
    <string name="app_link">https://www.github.com/volkansahin45/moneycim</string>
    <string name="nav_about">About</string>
    <string name="nav_share">Share</string>
    <string name="app_play_store_id">VTT</string>
    <string name="nav_analyze">Spending Analyze</string>

</resources>
